syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";

message Task{
  int32 id=1;
  string title=2;
  string priority=3;
}

message User {
  int32 id = 1;
  string userName = 2;
  string userImage = 3;
  string employeeId = 4;
  string email = 5;
  string phone = 6;
  int32 currentTask = 7;
  int32 maxTask = 8;
  bool status = 9;
  repeated string skills = 10;
  string roles = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
  repeated Task tasks=14;
}


message CreateUserRequest {
  string userName = 1;
  string userImage = 2;
  string employeeId = 3;
  string email = 4;
  string password = 5;
  string phone = 6;
  int32 currentTask = 7;
  int32 maxTask = 8;
  bool status = 9;
  repeated string skills = 10;
  string roles = 11;
}

message UpdateUserRequest {
  int32 id = 1;
  string userName = 2;
  string userImage = 3;
  string employeeId = 4;
  string email = 5;
  string phone = 6;
  int32 currentTask = 7;
  int32 maxTask = 8;
  bool status = 9;
  repeated string skills = 10;
  string roles = 11;
  repeated Task tasks=12;
}


message UserId {
  int32 id = 1;
}


message UserList {
  repeated User users = 1;
}


service UserService {
  rpc createUser(CreateUserRequest) returns (User);
  rpc getUser(UserId) returns (User);
  rpc updateUser(UpdateUserRequest) returns (User);
  rpc deleteUser(UserId) returns (User);
  rpc listUsers(Empty) returns (UserList);
}

// Empty message (for listing)
message Empty {}
